# sourcecheck-py

./: .clinerules  .gitignore  CLI_USAGE.md  CONFIGURATION_GUIDE.md  DEVELOPMENT.md  EXAMPLE_COMMANDS.md  PERFORMANCE_OPTIMIZATION.md  README.md  VALIDATOR_ARBITRATION_DESIGN.md  pyproject.toml  requirements.txt  validation_report_real.txt
.codex/: context.yaml  quickstart.md  schema_overview.md  validator_registry.md
.venv-311/: pyvenv.cfg
chart-checker/: pyvenv.cfg
checker/: __init__.py  arbitration.py  checker.py  cli.py  policies.yaml  types.py
checker/claimextractor/: __init__.py  configurable.py
checker/retrieval/: bm25_retriever.py  context_aware_bm25_retriever.py  dummy_retriever.py
checker/rubric/: __init__.py  auditor.py  completeness.py
checker/utils/: __init__.py
checker/validators/: __init__.py  clinical_nli_validator.py  regex_validator.py
examples/: README.md  REAL_DATA_README.md  TEXT_VALIDATION_README.md  agent_output.txt  real_summary.json  real_summary_hal.json  real_transcript.txt  run_example.py  run_real_example.py  sample_summary.json  sample_transcript.txt
policies/: sayvant_hpi.yaml  text_output.yaml
schemas/: sayvant_hpi.yaml  text_output.yaml
sourcecheck/: arbitration.py  checker.py  cli.py  config.py  policies.yaml  policies_all.yaml  schema.yaml  schema_configured.yaml  types.py
sourcecheck/claimextractor/: configurable.py
sourcecheck/quality/: __init__.py  base.py  registry.py  semantic_quality.py  temporal_numeric_drift.py
sourcecheck/retrieval/: __init__.py  base.py  keyword_retriever.py  registry.py  semantic_retriever.py
sourcecheck/rubric/: auditor.py  completeness.py
sourcecheck/utils/: embeddings.py  path_resolver.py
sourcecheck/validators/: __init__.py  always_true.py  base.py  bm25_validator.py  context_aware_bm25_validator.py  hybrid_bm25_minilm_validator.py  lexical_coverage_validator.py  minilm_validator.py  negation_refuter.py  nli_validator.py  registry.py  speaker_attribution_validator.py  temporal_drift_validator.py
tests/: __init__.py  test_caching.py  test_checker.py  test_config.py  test_extraction.py  test_retrieval.py  test_validators.py
