[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcecheck"
version = "0.1.0"
description = "A Python library for verifying text claims against source documents using NLI and retrieval"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy<2.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "spacy",
    "thinc",
    "scispacy",
    "negspacy",
    "rank-bm25==0.2.2",
    "nmslib-metabrainz==2.1.3",
    "sentence-transformers==5.1.2",
    "transformers==4.57.1",
    "torch>=2.1.0",
    "click==8.3.0",
    "cloudpathlib==0.23.0",
    "fsspec==2025.9.0",
    "huggingface-hub==0.36.0",
    "joblib==1.5.2",
    "pydantic>=2.0.0",
    "PyYAML==6.0.3",
    "tqdm==4.67.1",
    "requests==2.32.5",
    "rich==14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sourcecheck = "sourcecheck.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sourcecheck*"]
